--- a/plugins/WindowsThumbnail/WindowsThumbnail_12.vcxproj
+++ b/plugins/WindowsThumbnail/WindowsThumbnail_12.vcxproj
@@ -136,10 +136,7 @@
       <OutputFile>
       </OutputFile>
     </Bscmake>
-    <PostBuildEvent>
-      <Message>Per User Registration...</Message>
-      <Command>"$(TargetPath)" /RegServerPerUser</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Midl>
@@ -182,10 +179,7 @@
       <OutputFile>
       </OutputFile>
     </Bscmake>
-    <PostBuildEvent>
-      <Message>Per User Registration...</Message>
-      <Command>"$(TargetPath)" /RegServerPerUser</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Midl>
@@ -235,10 +229,7 @@
       <OutputFile>
       </OutputFile>
     </Bscmake>
-    <PostBuildEvent>
-      <Message>Per User Registration...</Message>
-      <Command>"$(TargetPath)" /RegServerPerUser</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Midl>
@@ -287,10 +278,7 @@
       <OutputFile>
       </OutputFile>
     </Bscmake>
-    <PostBuildEvent>
-      <Message>Per User Registration...</Message>
-      <Command>"$(TargetPath)" /RegServerPerUser</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ImageService.cpp" />
